--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "method-override": "^3.0.0",
     "mongoose": "^8.5.1",
     "morgan": "^1.10.0",
+    "npm": "^10.8.2"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.4"
   }
 }
